k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-react-next
  labels:
    app: front-react-next
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: front-react-next
