k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-react-next-ingress
  namespace: front-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: site.mstsi.eti.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-react-next
            port:
              number: 3000
